# glwatch

./: .gitignore  Makefile  README.md  gleam.toml  manifest.toml  spec.toml
erlang_src/: file_watcher.erl
rust_watcher/: .gitignore  Cargo.toml
rust_watcher/src/: lib.rs  main.rs
src/: config.gleam  file_watcher.erl  glwatch.gleam  glwatch_bc.gleam  glwatch_ffi.erl
test/: glwatch_test.gleam
