[package]
name = "rust_watcher"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
notify = "8.1.0"
rustler = { version = "0.37.0", features = ["nif_version_2_17", "derive"], default-features = false  }
glob = "0.3.2"

[lib]
name = "rust_watcher"
crate-type = ["dylib"]

[profile.release]
opt-level = 3          # Maximum optimization
lto = true             # Link-time optimization
codegen-units = 1      # Better optimization
strip = true           # Remove debug symbols
